# ecomm-prod-assistant

./: .gitignore  pyproject.toml  requirements.txt  versions.py
data/: product_reviews.csv
infra/: eks-with-ecr.yaml
notebook/: experiments.ipynb
prod_assistant/config/: config.yaml
prod_assistant/mcp_servers/: client.py
prod_assistant/retriever/: retrieval.py
prod_assistant/router/: main.py
prod_assistant/utils/: model_loader.py
prod_assistant/workflow/: agentic_rag_workflow.py  agentic_workflow_with_mcp.py  agentic_workflow_with_mcp_websearch.py  normal_generation_workflow.py
